[package]
name = "invelion"
description = "Driver for a number of Chinese UHF RFID Gen2 modules"
version = "0.1.1"
readme = "README.md"
homepage = "https://github.com/russss/rust-invelion"
repository = "https://github.com/russss/rust-invelion"
license = "LGPL-3.0-or-later"
authors = ["Russ Garrett <russ@garrett.co.uk>"]

[dependencies]
log = "0.4.8"
serial = "0.4.0"
num_enum = "0.4.1"
bitreader = "0.3.2"
